--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ header {
 
 .hero-content {
     display: flex;
-    align-items: flex-start; /* Align items to the top */
+    align-items: flex-start; 
     justify-content: space-between;
     background-color: #4B164C;
 }
@@ -83,13 +83,13 @@ header {
     font-family: 'Fantasy';
     color: #E91E63;
     font-size: 5em;
-    white-space: normal; /* Ensure normal word wrapping */
-    width: 60%; /* Ensure it covers the available space */
+    white-space: normal; 
+    width: 60%; 
 }
 
 .para1 {
 
-    font-size: 2em; /* Increase paragraph size */
+    font-size: 2em; 
     width: 60%;
     text-align: left;
     margin-left: 20px;
@@ -98,13 +98,13 @@ header {
 
 .buttons {
     display: flex;
-    gap: 10px; /* Space between buttons */
+    gap: 10px; 
     margin-left: 35px;
 }
 
 .icons {
     display: flex;
-    gap: 20px; /* Space between icon containers */
+    gap: 20px; 
     margin-top: 20px;
     font-size: large;
     font-style: oblique;
@@ -117,16 +117,16 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 2px solid white; /* Add white border */
-    padding: 10px; /* Add some padding for better appearance */
+    border: 2px solid white; 
+    padding: 10px; 
     border-radius: 25%;
-    position: relative; /* Set position to relative */
-    height: 250px; /* Set height of the container */
+    position: relative; 
+    height: 250px; 
     width:180px;
 }
 
 .icon {
-    width: 50px; /* Adjust the size of the icon */
+    width: 50px; 
     height: auto;
 }
 .para2 {
@@ -141,11 +141,11 @@ header {
     margin-top: 50px;
 }
 .icon4 {
-    width: 30px; /* Adjust the size of the icon4 */
+    width: 30px; 
     height: auto;
-    position: absolute; /* Set position to absolute */
-    bottom: 10px; /* Position at the bottom */
-    right: 20px; /* Position at the right */
+    position: absolute; 
+    bottom: 10px; 
+    right: 20px; 
 }
 
 .content-right {
@@ -153,7 +153,7 @@ header {
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    max-width: 50%; /* Adjust this value if needed */
+    max-width: 50%; 
 }
 
 .content-right img {
@@ -166,7 +166,7 @@ header {
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    max-width: 50%; /* Adjust this value if needed */
+    max-width: 50%; 
 }
 
 .content-right img {
@@ -192,26 +192,26 @@ header {
 }
 
 .styled-image {
-    height: 1000px; /* Adjust the height to make the image shorter */
-    width: 700px; /* Width of the image */
+    height: 1000px; 
+    width: 700px; 
 
 }
 .about-heading{
     font-family: 'Fantasy';
     color: #E91E63;
     font-size: 1em;
-    white-space: normal; /* Ensure normal word wrapping */
-    width: 90%; /* Ensure it covers the available space */
+    white-space: normal;
+    width: 90%; 
     text-align: center;
     margin-left: 35px;
 }
 
 
-/* Add padding and max-width to text divs */
+
 .above-right, .middle-left, .bottom-right {
     position: absolute;
-    background-color: rgba(255, 255, 255, 0.8); /* Optional: background to enhance text visibility */
-    padding: 5px; /* Add some padding for better appearance */
+    background-color: rgba(255, 255, 255, 0.8); 
+    padding: 5px; 
     max-width: 200px;
     height: 280px;
     border-radius: 25%;
@@ -297,14 +297,14 @@ img {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 20px 0; /* Add padding for spacing */
+    padding: 20px 0; 
 }
 
 .center-text1 {
     text-align: center;
     grid-area: heading;
-    margin: 0; /* Remove default margins */
-    padding: 10px ; /* Add padding for spacing */
+    margin: 0; 
+    padding: 10px ; 
 }
 
 
